--- a/view/component/landing_page/landing_page_sp.html
+++ b/view/component/landing_page/landing_page_sp.html
@@ -1,4 +1,4 @@
-			<div>
+			<div class="landing-page">
 				<div class="lp-section lp-bg-orange">
 					<div class="lp-classic-border">
 						<p class="lp-title">
@@ -41,7 +41,7 @@
 						三三的每樣產品背後都有 3 個元素
 					</p>
 					<div class="lp-text-cover-light">
-						<p class="lp-title">
+						<p class="lp-title lp-text-sep">
 							在地小農
 						</p>
 						<p class="lp-text">
@@ -50,7 +50,7 @@
 						</p>
 					</div>
 					<div class="lp-text-cover-light">
-						<p class="lp-title">
+						<p class="lp-title lp-text-sep">
 							身障社福
 						</p>
 						<p class="lp-text">
@@ -59,7 +59,7 @@
 						</p>
 					</div>
 					<div class="lp-text-cover-light">
-						<p class="lp-title">
+						<p class="lp-title lp-text-sep">
 							社會企業
 						</p>
 						<p class="lp-text">
@@ -68,7 +68,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="lp-section lp-image-background lp-content-right" id="lp-sicial-welfare">
+				<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-social-welfare">
 					<p class="lp-title">
 						陪伴社福身障走一段長遠的路
 					</p>
@@ -110,7 +110,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="lp-section lp-image-background lp-content-left" id="lp-peasant-farmer">
+				<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-peasant-farmer">
 					<p class="lp-title">
 						和小農成為夥伴
 					</p>
@@ -163,7 +163,7 @@
 						</div>
 					</div>
 				</div>
-				<div class="lp-section lp-image-background lp-content-left" id="lp-cold-handmade">
+				<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-cold-handmade">
 					<p class="lp-title">
 						專精冷製手作
 					</p>
@@ -177,7 +177,7 @@
 						就是要帶給消費者每個三三都放心的好產品
 					</p>
 				</div>
-				<div class="lp-section lp-image-background lp-content-right" id="lp-no-chemical">
+				<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-no-chemical">
 					<p class="lp-title">
 						無化學添加
 					</p>
@@ -193,7 +193,7 @@
 						X 化學起泡劑
 					</p>
 				</div>
-				<div class="lp-section lp-image-background lp-content-left" id="lp-long-time-develop">
+				<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-long-time-develop">
 					<p class="lp-title">
 						比別人多一倍的長時間研發
 					</p>
@@ -213,7 +213,7 @@
 						立即選購
 					</p>
 					<p class="lp-subtitle">
-						立即點選加入購物車，來聽聽每一個皂和你說的故事!
+						立即點選加入購物車，來聽聽每一個皂和你說的故事！
 					</p>
 					<a class="add-to-cart-link" href="javascript:void(0)" onclick="orderitemCreate('{item_no}')">
 						<!-- cart by praveen patchu from the Noun Project -->
