--- a/view/content/index.html
+++ b/view/content/index.html
@@ -18,55 +18,178 @@
 				</div>
 			</div>
 			<div class="slogan-wrap">
-				<h3 class="slogan-title">三個故事 Tri Story</h3>
-				<p class="slogan">
-					一切都是從一個座落在寧靜城市裡的、專門開辦二手販售以及手工皂製作的<br>
-					小型作業所「李勝賢文教基金會」開始的
+				<h2 class="slogan-title">我們走的那條三三路: 3種元素 x 3個堅持</h2>
+			</div>
+			<div class="lp-section lp-image-background" id="lp-three-elements">
+				<p class="lp-title">
+					三三的每樣產品背後都有 3 個元素
+				</p>
+				<div class="lp-text-cover-light">
+					<p class="lp-title lp-text-sep">
+						在地小農
+					</p>
+					<p class="lp-text">
+						合作超過20家台灣在地小農<br>
+						深入農田傾聽土地聲音。
+					</p>
+				</div>
+				<div class="lp-text-cover-light">
+					<p class="lp-title lp-text-sep">
+						身障社福
+					</p>
+					<p class="lp-text">
+						合作超過15家台灣身障小作所<br>
+						長期培訓與陪伴增加身障朋友就業
+					</p>
+				</div>
+				<div class="lp-text-cover-light">
+					<p class="lp-title lp-text-sep">
+						社會企業
+					</p>
+					<p class="lp-text">
+						以解決社會問題為出發的商業模式<br>
+						創新手法回饋社會。
+					</p>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-social-welfare">
+				<p class="lp-title">
+					陪伴社福身障走一段長遠的路
+				</p>
+				<p class="lp-text">
+					相對於使用大型機器大量生產降低成本，<br>
+					三三選擇將花費數個月的心力研發出的特色單品皂，<br>
+					將技術完整轉移交給身障學員生產，<br>
+					目前合作的日間照顧作業設施(小作所)已多達15間，<br>
+					所合作涵蓋在內更多達200位身障學員。<br>
+					從認識彼此到培訓、帶活動實作上課程，<br>
+					每一個皂一點一滴的累計秤量攪皂入模晾皂，<br>
+					看著學員手把手的進步，<br>
+					也等同於看見他們又露出自信的笑容。
+				</p>
+				<a class="lp-orange-btn" href="#">
+					點我看更多社福故事
+				</a>
+			</div>
+			<div class="lp-section lp-certificate">
+				<picture>
+					<source srcset="resource/img/misc/logo-highlight.svg" type="image/svg+xml">
+					<img class="trisoap-logo" src="resource/img/misc/logo-highlight.png" alt="三三吾鄉皂 logo">
+				</picture>
+				<div class="lp-certificate-content">
+					<p class="lp-title">
+						“全台灣最多公益小作所指定合作社會企業品牌”
+					</p>
+					<p class="lp-text">
+						兩年多的努力和耕耘，三三集結眾多台灣在地小農和小作所，所服務小作所多達15間，累積超過200位合作身障學員。
+					</p>
+					<div class="lp-round">
+						<p class="lp-title">
+							SE
+						</p>
+						<p class="lp-text">
+							經濟部<br>
+							社會企業認證
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-peasant-farmer">
+				<p class="lp-title">
+					和小農成為夥伴
+				</p>
+				<p class="lp-text">
+					相對於使用大型機器耕作的慣行農法，<br>
+					帶著有機無毒或自然農法等相關概念，<br>
+					規模較小的自耕農稱之為小農。<br>
+					為了增加皂的個性以及選取特色農品素材，<br>
+					三三和臺灣東部小農成為夥伴，<br>
+					親自到農田聽小農說故事和種植理念，<br>
+					除了選取三三特色農品研發之外，<br>
+					更與小農共同曝光共同行銷，<br>
+					將台灣土地情感散播出去。
+				</p>
+				<a class="lp-orange-btn" href="#">
+					點我看更多小農故事
+				</a>
+			</div>
+			<div class="lp-section lp-bg-orange" id="lp-three-insistence">
+				<p class="lp-title">
+					三三吾鄉的 3 大堅持
+				</p>
+				<div class="lp-three-rounds">
+					<div class="lp-round">
+						<p class="lp-title">
+							堅持冷製
+						</p>
+						<p class="lp-text">
+							堅持超過12道手作工序<br>
+							33天以上晾皂品質保證
+						</p>
+					</div>
+					<div class="lp-round">
+						<p class="lp-title">
+							天然植物油
+						</p>
+						<p class="lp-text">
+							採用誠香集認證<br>
+							食品級植物油
+						</p>
+					</div>
+					<div class="lp-round">
+						<p class="lp-title">
+							無化學添加
+						</p>
+						<p class="lp-text">
+							保證無矽靈無防腐劑<br>
+							無起泡劑無界面活性劑
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-content-left lp-text-opposite-side" id="lp-img-cold-handmade">
+				<p class="lp-title">
+					專精冷製手作
+				</p>
+				<p class="lp-text">
+					冷製法是指在手製手工皂過程中<br>
+					透過低溫攪製的方式保留植物油營養成分<br>
+					12道完整工序<br>
+					從秤量到攪拌<br>
+					從LT到Trace<br>
+					品質管控一點都不馬虎<br>
+					就是要帶給消費者每個三三都放心的好產品
 				</p>
 			</div>
-			<div class="story-wrap">
-				<div class="story">
-					<div class="story-img-wrap">
-						<picture>
-							<source srcset="resource/img/index/story/society.webp" type="image/webp">
-							<img class="story-img" src="resource/img/index/story/society.jpg" alt="Story 1 愛的釀皂">
-						</picture>
-					</div>
-					<div class="story-text">
-						<h3>愛的釀皂</h3>
-						<p>
-							我們故事的第一主角，就是一個個穿上工作服、蓄勢待發地在一旁準備的憨兒們。我們在學習打皂時，他們活像個監督我們生產流程的督導一般。我們非常迅速地在「攪拌」關卡中，不到十分鐘便棄械投降，一旁的憨兒主動地替補了我們的工作，在測量每一種油品時的專注力高的嚇人，連一滴油都不會逃過他們的法眼，當時的我們，深深被這一幅畫面所震懾。
-						</p>
-					</div>
+			<div class="lp-section lp-image-background lp-content-right" id="lp-img-natural-oil">
+				<div class="lp-text-cover-dark">
+					<p class="lp-title lp-text-sep">
+						天然植物油多種配方
+					</p>
+					<p class="lp-text">
+						採用誠香集認證天然植物油<br>
+						精心調配多種配方<br>
+						乾性、中性、油性、敏感型肌膚<br>
+						對應多項肌膚設計不同配方皂絲款式<br>
+						貼心為你量身而製
+					</p>
 				</div>
-				<div class="story">
-					<div class="story-img-wrap">
-						<picture>
-							<source srcset="resource/img/index/story/farm.webp" type="image/webp">
-							<img class="story-img" src="resource/img/index/story/farm.jpg" alt="Story 2 吾鄉小農">
-						</picture>
-					</div>
-					<div class="story-text">
-						<h3>吾鄉小農</h3>
-						<p>
-							第二個故事主角，就是位於台東的在地小農與三樣特色農作物－米、金針花跟釋迦。會成為我們主角的原因很簡單，因為他們堅持好品質、有機，照顧農作物像照顧自己的孩子一樣，用山泉水灌溉並使用自然農法，他們的堅持正完全符合我們的經營理念！
-						</p>
-					</div>
-				</div>
-				<div class="story">
-					<div class="story-img-wrap">
-						<picture>
-							<source srcset="resource/img/index/story/intern.webp" type="image/webp">
-							<img class="story-img" src="resource/img/index/story/intern.jpg" alt="Story 3 社會企業">
-						</picture>
-					</div>
-					<div class="story-text">
-						<h3>社會企業</h3>
-						<p>
-							第三個故事就是因著在地小農和社福團體而生的社會企業的故事，三三吾鄉秉持著社會企業的精神，協助解決在地的社會問題，期待透過新的創新，帶動在地的新生。
-						</p>
-					</div>
-				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-no-chemical">
+				<p class="lp-title">
+					無化學添加
+				</p>
+				<p class="lp-subtitle">
+					只給你最必要的成分，最單純。
+				</p>
+				<p class="lp-text">
+					X 化學色素染劑<br>
+					X 化學防腐劑<br>
+					X 化學界面活性劑<br>
+					X 矽靈<br>
+					X 化學增稠劑<br>
+					X 化學起泡劑
+				</p>
 			</div>
 		</main>
 
