--- a/view/content/trial.html
+++ b/view/content/trial.html
@@ -1,38 +1,168 @@
 		<main>
-			<div class="slogan-wrap">
-				<h2 class="slogan-title">
-					好皂不怕人試 , 讓我們認識你。
-				</h2>
-				<p class="slogan">
+			<div class="lp-section lp-bg-orange">
+				<p class="lp-mark">
+					認識我們
+				</p>
+				<p class="lp-title">
+					好皂不怕人試，讓我們認識你。
+				</p>
+				<p class="lp-text">
 					三三捨去大筆買廣告的錢，想透過最貼身的方式<br>
 					讓客戶認識我們，推行試用計畫屢受好評。
 				</p>
 			</div>
-			<div class="feature-wrap" id="feature1">
-				<h2 class="feature-title">
-					台東小農素材添加：池上米米糠、池上無硫金針，帶給你豐富體驗
-				</h2>
-				<p class="feature-text">
-					池上米選用與高家米倉小農合作，碾米後的最後一道青殼，作為素材添加不僅天然也可增加去角質洗感。<br>
-					選用在地無硫金針乾燥的小農食在品牌，取代傳統的化學食用色素，用金針花絲點綴不同的視覺感受。
+			<div class="lp-section lp-image-background lp-content-left" id="lp-img-teng-partner">
+				<div class="lp-text-cover-dark">
+					<p class="lp-title">
+						十公克夥伴
+					</p>
+					<p class="lp-subtitle lp-text-sep">
+						金絲森林渲染皂 x 田園山巒禾風皂
+					</p>
+					<p class="lp-text">
+						來自台東的兩位10g 好夥伴<br>
+						貼心設計讓小皂符合手掌心大小<br>
+						代表三三與你們初次相見。
+					</p>
+				</div>
+			</div>
+			<div class="lp-plain-text">
+				<p class="lp-title">
+					三三的好品質讓試用過的人都驚艷
 				</p>
 			</div>
-			<div class="feature-wrap" id="feature2">
-				<h2 class="feature-title">
-					天然植物油調和，無毒無化學添加
-				</h2>
-				<p class="feature-text">
-					皂內綜合食品級天然橄欖油、椰子油、乳油木果脂、葡萄籽油......等高達八項天然植物油品，<br>
-					堅持無化學溶劑、染劑、矽靈、起泡劑、防腐劑……等有害物添加，勢要讓消費者感受到天然洗感的特色。
+			<div class="lp-section lp-bg-orange" id="lp-three-insistence">
+				<p class="lp-title">
+					三三吾鄉的 3 大堅持
+				</p>
+				<div class="lp-three-rounds">
+					<div class="lp-round">
+						<p class="lp-title">
+							堅持冷製
+						</p>
+						<p class="lp-text">
+							堅持超過12道手作工序<br>
+							33天以上晾皂品質保證
+						</p>
+					</div>
+					<div class="lp-round">
+						<p class="lp-title">
+							天然植物油
+						</p>
+						<p class="lp-text">
+							採用誠香集認證<br>
+							食品級植物油
+						</p>
+					</div>
+					<div class="lp-round">
+						<p class="lp-title">
+							無化學添加
+						</p>
+						<p class="lp-text">
+							保證無矽靈無防腐劑<br>
+							無起泡劑無界面活性劑
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-content-right" id="lp-img-cold-pro">
+				<p class="lp-title">
+					專精冷製手作
+				</p>
+				<p class="lp-text">
+					冷製法是指在手製手工皂過程中，<br>
+					透過低溫攪製的方式保留植物油營養成分，<br>
+					為避免破壞植物油中營養成分，<br>
+					三三透過12道完整工序製作出皮膚最好的產品。
 				</p>
 			</div>
-			<div class="feature-wrap" id="feature3">
-				<h2 class="feature-title">
-					冷製手作，堅持超過一個月以上量皂期
-				</h2>
-				<p class="feature-text">
-					選用皂中最繁複冷製作法，並添加三三獨門步驟，完整16步驟毫不馬虎，堅持在中途加入超過一個月以上量皂期，<br>
-					並在出貨前使用試紙檢驗酸鹼值，高嚴謹的品管方法和高品質的冷製製成，是我們要帶給消費者的一種態度。
+			<div class="lp-section lp-image-background lp-content-left" id="lp-img-listen-to-earth">
+				<p class="lp-title">
+					傾聽土地的聲音
 				</p>
+				<p class="lp-text">
+					注重環境的時代已經來臨，<br>
+					三三屢次來到台灣美麗的後山，<br>
+					和三三夥伴小農一同傾聽土地的聲音，<br>
+					也傾聽小農的聲音，<br>
+					聽他們無毒有機的種植理念，<br>
+					更堅定三三產品當中小農素材添加的健康堅持，<br>
+					每一個加入的特色素材都花比其他品牌多上幾倍的時間，<br>
+					了解種植方式、研發、試用、修正。
+				</p>
+			</div>
+			<div class="lp-section lp-plain-text lp-content-left">
+				<p class="lp-title">
+					“他們很喜歡做皂，<br>
+					但我們都怕做出來賣不出去”
+				</p>
+				<p class="lp-text lp-bg-orange">
+					 三三的初心來自於擔憂臺灣身障學員就業不穩定的問題，<br>
+					 在台灣有多達上百間小作所面臨到品質不穩、研發技術不足、人力缺乏、無力行銷等問題。<br>
+					 更統計臺灣資源缺乏小作所，身障學員勞動閒置率高達90%，<br>
+					 三三想讓認真工作的身障學員們有工作做，有舞台可以展現他們的功夫。
+				</p>
+			</div>
+			<div class="lp-section lp-image-background lp-content-left" id="lp-img-retarded-produce-together">
+				<p class="lp-title">
+					身障學員協力生產
+				</p>
+				<p class="lp-subtitle lp-bg-orange">
+					「你手裡的每塊皂，三三都能自信的說，是與我們的身障學員協力生產而來。」
+				</p>
+				<p class="lp-text">
+					三三創辦人又令夥同樂芽社會企業，手把手與每間小作所協商洽談，<br>
+					技術移轉培訓身障學員如喜憨兒、自閉症、精神障礙等學員協力生產，<br>
+					數百個日子的陪伴和磨練，培訓出身障學員的自信手藝。
+				</p>
+			</div>
+			<div class="lp-section lp-certificate">
+				<picture>
+					<source srcset="resource/img/misc/logo-highlight.svg" type="image/svg+xml">
+					<img class="trisoap-logo" src="resource/img/misc/logo-highlight.png" alt="三三吾鄉皂 logo">
+				</picture>
+				<div class="lp-certificate-content">
+					<p class="lp-title">
+						“全台灣最多公益小作所指定合作社會企業品牌”
+					</p>
+					<p class="lp-text">
+						兩年多的努力和耕耘，三三集結眾多台灣在地小農和小作所，所服務小作所多達15間，累積超過200位合作身障學員。
+					</p>
+					<div class="lp-round">
+						<p class="lp-title">
+							SE
+						</p>
+						<p class="lp-text">
+							經濟部<br>
+							社會企業認證
+						</p>
+					</div>
+				</div>
+			</div>
+			<div class="lp-section lp-image-background lp-content-right lp-text-opposite-side" id="lp-img-media-report">
+				<p class="lp-title">
+					國內外媒體爭光報導
+				</p>
+				<p class="lp-text">
+					三三的好品質屢受媒體青睞，<br>
+					近來更受國外媒體報導為臺灣爭光，<br>
+					更受到經濟部認證社會企業殊榮，<br>
+					入圍臺東好物等多項大獎，<br>
+					各大媒體也掛名保證的好品質!
+				</p>
+				<a class="lp-orange-btn" href="#">
+					點此看三三國際報導
+				</a>
+			</div>
+			<div class="lp-section lp-plain-text lp-cta">
+				<p class="lp-title">
+					心動不如馬上行動
+				</p>
+				<p class="lp-subtitle">
+					立即點選免費申請限量試用包，讓三三認識你！
+				</p>
+				<a class="lp-orange-btn" href="#">
+					我要申請
+				</a>
 			</div>
 		</main>
