update html for landing pages

--- a/view/component/jumbotron/btn.html
+++ b/view/component/jumbotron/btn.html
@@ -1,5 +1,5 @@
 				<div class="jumbotron-btn">
-					<a class="primary-btn" href="{route_btn_link}">
+					<a class="lp-orange-btn" href="{route_btn_link}">
 						{route_btn_text}
 					</a>
 				</div>
