--- a/view/component/landing_page/landing_page_ss.html
+++ b/view/component/landing_page/landing_page_ss.html
@@ -20,6 +20,7 @@
 						但卻在打包行李的時候，<br>
 						東一罐西一罐沐浴乳洗髮精增加重量又佔空間，<br>
 						還掃了旅行的興致。<br>
+						<br>
 						不想用飯店的廉價備品，<br>
 						想要有個貼身品質好的洗沐用品有這麼難嗎？
 					</p>
@@ -45,7 +46,7 @@
 					</p>
 				</div>
 				<div class="lp-section lp-image-background lp-content-left" id="lp-img-foam-fest">
-					<div class="lp-text-cover-dark">
+					<div class="lp-text-cover-dark lp-content-left">
 						<p class="lp-title">
 							泡沫饗宴
 						</p>
@@ -63,7 +64,7 @@
 					</div>
 				</div>
 				<div class="lp-section lp-image-background lp-content-right" id="lp-img-natural-oil">
-					<div class="lp-text-cover-dark">
+					<div class="lp-text-cover-dark lp-content-right">
 						<p class="lp-title lp-text-sep">
 							天然植物油多種配方
 						</p>
@@ -80,6 +81,44 @@
 					<p class="lp-title">
 						用過皂絲包的人都這樣說
 					</p>
+					<div class="lp-customer-feedbacks">
+						<div class="lp-cf">
+							<div class="lp-cf-head">
+								<p class="lp-cf-title">
+									吳小姐
+								</p>
+							</div>
+							<div class="lp-cf-content lp-bg-orange">
+								<p class="lp-cf-text">
+									旅用皂絲包是很棒的構想，可以當皂網直接搓揉起泡，而且這樣的設計也省去額外的包裝，是兼具環保的巧思。
+								</p>
+							</div>
+						</div>
+						<div class="lp-cf">
+							<div class="lp-cf-head">
+								<p class="lp-cf-title">
+									Wanda
+								</p>
+							</div>
+							<div class="lp-cf-content lp-bg-orange">
+								<p class="lp-cf-text">
+									稍微搓揉一下就起了很多泡泡。我覺得是一款很天然且用量又很省的手工皂！我滿喜歡的！謝謝身障學員們，克服了先天的障礙，也謝謝三三創造了這麼棒的商品！
+								</p>
+							</div>
+						</div>
+						<div class="lp-cf">
+							<div class="lp-cf-head">
+								<p class="lp-cf-title">
+									張小姐
+								</p>
+							</div>
+							<div class="lp-cf-content lp-bg-orange">
+								<p class="lp-cf-text">
+									一開始是朋友介紹給我的，覺得皂絲這個產品感覺很特別。剛好一次旅行就拿來用用看，我印象最深刻的就是一搓下去就起了很多泡泡，因為我的小孩很喜歡玩泡泡，所以對產品加分很多。
+								</p>
+							</div>
+						</div>
+					</div>
 				</div>
 				<div class="lp-section lp-image-background lp-content-right" id="lp-img-easy-to-carry">
 					<p class="lp-title">
@@ -108,7 +147,7 @@
 					<p class="lp-title">
 						社福協力生產
 					</p>
-					<p class="lp-subtitle">
+					<p class="lp-subtitle lp-bg-orange">
 						“從生產到包裝，我們看見身障朋友活躍的表現！”
 					</p>
 					<p class="lp-text">
