--- a/view/content/trial.html
+++ b/view/content/trial.html
@@ -1,15 +1,17 @@
 		<main>
 			<div class="lp-section lp-bg-orange">
-				<p class="lp-mark">
+				<div class="lp-mark">
 					認識我們
-				</p>
-				<p class="lp-title">
-					好皂不怕人試，讓我們認識你。
-				</p>
-				<p class="lp-text">
-					三三捨去大筆買廣告的錢，想透過最貼身的方式<br>
-					讓客戶認識我們，推行試用計畫屢受好評。
-				</p>
+				</div>
+				<div class="lp-content-left">
+					<p class="lp-title">
+						好皂不怕人試，讓我們認識你。
+					</p>
+					<p class="lp-text">
+						三三捨去大筆買廣告的錢，想透過最貼身的方式<br>
+						讓客戶認識我們，推行試用計畫屢受好評。
+					</p>
+				</div>
 			</div>
 			<div class="lp-section lp-image-background lp-content-left" id="lp-img-teng-partner">
 				<div class="lp-text-cover-dark">
@@ -25,11 +27,55 @@
 						代表三三與你們初次相見。
 					</p>
 				</div>
+				<p class="lp-text lp-circle" id="lp-circle-chihshang-rice">
+					池上米
+				</p>
+				<p class="lp-text lp-circle" id="lp-circle-lily">
+					萱草
+				</p>
 			</div>
-			<div class="lp-plain-text">
+			<div class="lp-section lp-plain-text">
 				<p class="lp-title">
 					三三的好品質讓試用過的人都驚艷
 				</p>
+				<div class="lp-customer-feedbacks">
+					<div class="lp-cf">
+						<div class="lp-cf-head">
+							<p class="lp-cf-title">
+								Lai小姐
+							</p>
+						</div>
+						<div class="lp-cf-content lp-bg-orange">
+							<p class="lp-cf-text">
+								很滋潤，不會讓人覺得洗完很乾，也不會像他牌手工皂幾乎不起泡。是個洗了會讓人很有成就感的超棒肥皂！謝謝你們創造出這麼棒的手工皂！在你們的產品內完全感受得到你們的用心！
+							</p>
+						</div>
+					</div>
+					<div class="lp-cf">
+						<div class="lp-cf-head">
+							<p class="lp-cf-title">
+								Medea小姐
+							</p>
+						</div>
+						<div class="lp-cf-content lp-bg-orange">
+							<p class="lp-cf-text">
+								收到這份試用包的時候很驚喜，也很感動，完全能感受到製作者的用心，謝謝你們的用心對台灣的土地把關，洗身體的起泡力跟洗淨力都非常滿意，為這份土地的盡心盡力！
+							</p>
+						</div>
+					</div>
+					<div class="lp-cf">
+						<div class="lp-cf-head">
+							<p class="lp-cf-title">
+								Kitty小姐
+							</p>
+						</div>
+						<div class="lp-cf-content lp-bg-orange">
+							<p class="lp-cf-text">
+								我本身不喜歡皮膚接觸太多的香料和香味，三三的手工皂很天然，沒摻入化學的成分，所以我會支持道地的產品。三三的手工皂，樸素卻帶有一種很實在的感覺，沒有華麗的包裝，但是讓人看得出是做得很用心的產品，這樣的產品真的不輸市面上的產品。
+							</p>
+						</div>
+					</div>
+				</div>
 			</div>
 			<div class="lp-section lp-bg-orange" id="lp-three-insistence">
 				<p class="lp-title">
