remove btn links

--- a/view/content/trial.html
+++ b/view/content/trial.html
@@ -196,9 +196,6 @@
 					入圍臺東好物等多項大獎，<br>
 					各大媒體也掛名保證的好品質!
 				</p>
-				<a class="lp-orange-btn" href="#">
-					點此看三三國際報導
-				</a>
 			</div>
 			<div class="lp-section lp-plain-text lp-cta">
 				<p class="lp-title">
@@ -207,7 +204,7 @@
 				<p class="lp-subtitle">
 					立即點選免費申請限量試用包，讓三三認識你！
 				</p>
-				<a class="lp-orange-btn" href="#">
+				<a class="lp-orange-btn" href="https://trisoap.typeform.com/to/voNGpg">
 					我要申請
 				</a>
 			</div>
