remove btn link in index landing page, add cta

--- a/view/content/index.html
+++ b/view/content/index.html
@@ -67,9 +67,6 @@
 					看著學員手把手的進步，<br>
 					也等同於看見他們又露出自信的笑容。
 				</p>
-				<a class="lp-orange-btn" href="#">
-					點我看更多社福故事
-				</a>
 			</div>
 			<div class="lp-section lp-certificate">
 				<picture>
@@ -109,9 +106,6 @@
 					更與小農共同曝光共同行銷，<br>
 					將台灣土地情感散播出去。
 				</p>
-				<a class="lp-orange-btn" href="#">
-					點我看更多小農故事
-				</a>
 			</div>
 			<div class="lp-section lp-bg-orange" id="lp-three-insistence">
 				<p class="lp-title">
@@ -190,6 +184,17 @@
 					X 化學增稠劑<br>
 					X 化學起泡劑
 				</p>
+			</div>
+			<div class="lp-section lp-plain-text lp-cta">
+				<p class="lp-title">
+					心動不如馬上行動
+				</p>
+				<p class="lp-subtitle">
+					立即點選免費申請限量試用包，讓三三認識你！
+				</p>
+				<a class="lp-orange-btn" href="https://trisoap.typeform.com/to/voNGpg">
+					我要申請
+				</a>
 			</div>
 		</main>
 
