--- a/view/content/products.html
+++ b/view/content/products.html
@@ -5,6 +5,6 @@
 					<a class="guide-anchor" href="index.php?route=soapstring"> / 皂絲</a>
 					<a class="guide-anchor" href="index.php?route=gift_box"> / 禮盒</a>
 				</div>
-				<div id="products"></div>
+				<div class="products"></div>
 			</div>
 		</main>
