--- a/view/content/single_product.html
+++ b/view/content/single_product.html
@@ -31,5 +31,11 @@
 					<p class="main-content-text">{skin_type}</p>
 				</div>
 			</div>
-			{landing_page}
+			<div class="main-wrap products-wrap" id="recommended_products">
+				<h2 class="main-content-title">買了本商品的人也買了</h2>
+				<div class="products"></div>
+			</div>
+			<div>
+				{landing_page}
+			</div>
 		</main>
