--- a/view/user_function/member_signin.html
+++ b/view/user_function/member_signin.html
@@ -2,7 +2,7 @@
             <div class="sign-wrap">
                 <div class="sign text-center">
                     <h2>登入</h2>
-                    <fb:login-button scope="public_profile,email" data-auto-logout-link="true" data-size="large" data-button-type="continue_with"></fb:login-button>
+                    <fb:login-button scope="public_profile,email" data-auto-logout-link="true" data-size="large" data-button-type="login_with"></fb:login-button>
                     <hr class="text-sep-sm">
                     <div class="sign-block">
                         <label for="account">電子信箱</label>
