audit z index related css to solve chrome bug

--- a/resource/css/trisoap.scss
+++ b/resource/css/trisoap.scss
@@ -868,8 +868,8 @@ $buy-now-btn-width: 44%;
 
 .product-cover {
 	position: relative;
-	width: 100%;
 	overflow: hidden;
+	transform: translateZ(0);
 }
 
 .product-cover-img {
