add noopener setting

--- a/view/content/shopping_guide.html
+++ b/view/content/shopping_guide.html
@@ -59,7 +59,7 @@
 					<p class="guide-text">
 						三三提供多元的購買管道，也可至相關合作單位購買。<br>
 						Pinkoi設計館 ：
-						<a class="guide-link" href="https://www.pinkoi.com/product/HrSMGBn3">
+						<a class="guide-link" href="https://www.pinkoi.com/product/HrSMGBn3" target="_blank" rel="noopener">
 							https://www.pinkoi.com/product/HrSMGBn3
 						</a>
 					</p>
